--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fashion Boutique - Estilo Único</title>
-    <meta name="description" content="Descubra as melhores marcas de moda em um só lugar. Estilo único e qualidade excepcional." />
-    <meta name="author" content="Fashion Boutique" />
 
-    <meta property="og:title" content="Fashion Boutique - Estilo Único" />
-    <meta property="og:description" content="Descubra as melhores marcas de moda em um só lugar. Estilo único e qualidade excepcional." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Alternativa Modas</title>
+  <meta name="description"
+    content="Descubra as melhores marcas de moda em um só lugar. Estilo único e qualidade excepcional." />
+  <meta name="author" content="Alternativa Modas" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Alternativa Modas - Estilo Único" />
+  <meta property="og:description"
+    content="Descubra as melhores marcas de moda em um só lugar. Estilo único e qualidade excepcional." />
+  <meta property="og:type" content="website" />
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
